Se sube el proyecto corriendo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    
+    <!-- Set the base href -->
+    <script>document.write('<base href="' + document.location + '" />');</script>
 
     <!-- 1. Cargando librerias -->
      <!-- Polyfill(s) para navegadores antiguos -->
