--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     
     <!-- Set the base href -->
-    <script>document.write('<base href="' + document.location + '" />');</script>
+    <script>document.write('<base href="/" />');</script>
 
     <!-- 1. Cargando librerias -->
      <!-- Polyfill(s) para navegadores antiguos -->
